2003-01-12  John Harper  <jsh@unfactored.org>

	* sawfish/wm/placement.jl: applied patch from Steve Hill
	<firefury@sucs.org> to make several placement modes use the
	current-head, not the head of the placed window

2002-11-13  John Harper  <jsh@unfactored.org>

	Merged from HEAD:

	* sawfish/wm/windows.jl (adjust-position-for-gravity/y): fixed
	typo when accessing window-frame-offset. Fixes #98315

2002-11-09  John Harper  <jsh@unfactored.org>

	* version 1.2

2002-11-08  John Harper  <jsh@unfactored.org>

	Merged from HEAD:

	* sawfish/wm/util/font.jl: handle XLFD fonts with no dashes,
	e.g. like "fixed", also, be more intelligent when creating
	Pango names

2002-11-03  John Harper  <jsh@unfactored.org>

	Merged these changes from HEAD:

	* sawfish/wm/session/init.jl, sawfish/wm/session/load.jl
	(sm-sloppy-id-matching): added this option to let me get some
	level of session management from broken applications (xterm in
	this case, which doesn't seem to set SM_CLIENT_ID by the time
	it maps the window)

	* sawfish/wm/util/font.jl (xlfd-description->face,
	face->xlfd-description): the missing pieces to this module.

	Also, handle the Xft abbreviated styles more correctly

	* sawfish/wm/windows.jl (dock-window-depth): changed this
	again, now to zero, the depth of normal windows

2002-11-03  John Harper  <jsh@unfactored.org>

	Merged these changes from HEAD:

	* sawfish/wm/custom.jl: font [de]serializers now export (TYPE .
	NAME), they accept both this and the old untyped form

	* sawfish/wm/util/font.jl: new file, some functions for
	representing font (face) names, and converting between Xft and
	Pango representations of these names. Somewhat incomplete
	(doesn't know how to map Pango widths to Xft yet)

	2002-11-02  John Harper  <jsh@unfactored.org>

	* sawfish/wm/menus.jl: added some more accelerators
	* sawfish/wm/workspace.jl (static-workspace-menus): added a few
	accelerators (for #76286)

2002-11-02  John Harper  <jsh@unfactored.org>
