@@ -1,3 +1,10 @@
+2003-01-14  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/ext/window-history.jl (window-history-key,
+	window-history-key-property): the variable may now be a list,
+	in which case the list of named properties is used as the key.
+	It now defaults to (WM_CLASS WM_WINDOW_ROLE)
+
 2003-01-12  John Harper  <jsh@unfactored.org>
 
 	* sawfish/wm/placement.jl: applied patch from Steve Hill
